--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ h1{
 
 .task{
     background-color: white;
-    width: 100%;
-    border: 2px white;
-    height: 30px;
-    padding-top: 10px;
+    padding: 20px;
+    padding-top: 20px;
+    border-radius: 8px;
+    padding-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 #stbotton{
@@ -37,4 +38,79 @@ h1{
 }
 #ndbotton{
     border-radius: 10%;
+}
+
+.secondbox{
+    background-color: white;
+    width: 100%;
+    border: 2px white;
+    height: 500px;
+    padding-top: 10px;
+    padding-left: 15px;
+    vertical-align: middle;
+    margin-top: 10px;
+
+}
+
+.top{
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+.done{
+    color: green;
+    font-size: 10px;
+    font-weight: bold;
+    border: 2px solid green;
+    border-radius: 50%;
+    padding: 2px;
+    margin-right: 5px;
+    margin-left: 20px;
+    vertical-align: middle;
+    margin-top: 100px;
+
+
+}
+
+label{
+    font-size: 10px;
+    font-weight: 200;
+    color: white;
+    padding: 6px 10px;
+    border-radius: 10px;
+    vertical-align: middle;
+    margin-left: 3px;
+
+}
+
+.blue{
+    background-color: lightblue;
+}
+
+.viola{
+    background-color: rgb(248, 244, 248);
+}
+
+.green{
+    background-color: lightgreen;
+}
+
+
+.attivity{
+    margin-top: 100px;
+}
+
+.no{
+     color:red;
+    font-size: 10px;
+    font-weight: bold;
+    border: 2px solid red;
+    border-radius: 50%;
+    padding: 2px;
+    margin-right: 5px;
+    margin-left: 20px;
+    vertical-align: middle;
+    margin-top: 100px;
+
+
 }
